Fix vertical alignment of menu items.

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -46,12 +46,6 @@ $header-menu-line-height: 16px;
     > li, > li > ul { 
         // display: none; 
     }
-    .menu-item-hamburger {
-        // display: block;
-        a {
-            margin-top: -2px; // correct bottom text alignment with text links
-        }
-    }
     @media #{$medium-up} { 
         > li, > li > ul { 
             display: block; 
